@@ -1,4 +1,5 @@
 0.18
+ - Add support for print of all aliases.
  - Add support for print of all descriptions.
  - Filter sitelinks via language.
 
